<resources>
    <string name="app_name">Android55</string>
    <string name="register_as_teacher">Register As Teacher</string>
    <string name="register_as_student">Register as Student</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>

    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="dashboard">Dashboard</string>
    <string name="logout">Logout</string>
</resources>